--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "next": "^9.5.3",
+    "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react": "^16.13.1"
+    "reactstrap": "^8.6.0"
   },
   "scripts": {
     "dev": "next",
