--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
+    "@apollo/react-ssr": "^3.1.5",
+    "apollo-boost": "^0.4.7",
+    "graphql": "^15.0.0",
     "next": "^9.5.3",
+    "next-apollo": "^3.1.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "reactstrap": "^8.6.0"
@@ -14,7 +19,9 @@
     "build": "next build",
     "start": "next start"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint-plugin-react": "^7.21.3"
+  },
   "author": "",
   "license": "ISC"
 }
