feat: add node server for routing

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@apollo/react-hooks": "^3.1.5",
     "@apollo/react-ssr": "^3.1.5",
     "apollo-boost": "^0.4.7",
+    "express": "^4.17.1",
     "graphql": "^15.0.0",
     "next": "^9.5.3",
     "next-apollo": "^3.1.10",
@@ -15,9 +16,9 @@
     "reactstrap": "^8.6.0"
   },
   "scripts": {
-    "dev": "next",
+    "dev": "node server",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "devDependencies": {
     "eslint-plugin-react": "^7.21.3"
