--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "strapi-plugin-graphql": "^3.1.6",
     "strapi-plugin-upload": "3.1.6",
     "strapi-plugin-users-permissions": "3.1.6",
-    "strapi-utils": "3.1.6"
+    "strapi-utils": "3.1.6",
+    "stripe": "^8.107.0"
   },
   "author": {
     "name": "A Strapi developer"
