--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -22,7 +22,11 @@
     "space-infix-ops": ["error", { "int32Hint": false }],
     "object-curly-spacing": ["error", "always"],
     "eqeqeq": "warn",
-    "indent": ["error", 2, { "SwitchCase": 1 }],
+    "indent": [
+      "error",
+      2,
+      { "SwitchCase": 1, "offsetTernaryExpressions": true }
+    ],
     "key-spacing": ["error", { "beforeColon": false }],
     "no-console": "off",
     "no-fallthrough": "warn",
